# NextStop-NN

./: .gitignore  Makefile  README.md  docker-compose.yaml
.github/workflows/: lint-python.yml
backend/: .pre-commit-config.yaml  data_cleaned.csv  fill_qdrant.py  init_qdrant.py  main.py  ml.py  open_street_map.pkl  pyproject.toml  restore_qdrant_snapshot.py  visiting_time.csv
backend/app/: main.py
backend/application/: main.py
backend/application/core/: __init__.py  config.py
backend/application/db/: __init__.py  qdrant_repo.py
backend/application/models/: place_payload.py
backend/application/schemas/: user_input.py  user_io.py
backend/application/services/: limiter.py  ml.py  utils.py
backend/tests/: __init__.py  test_data_receiving.py  test_ml.py  test_utils.py
frontend/: package-lock.json
qdrant_data/: raft_state.json
qdrant_data/collections/nn_places/0/: newest_clocks.json  replica_state.json
qdrant_data/collections/nn_places/0/segments/674cbdfb-c3a5-4ac7-a579-daf36819c702/: mutable_id_tracker.mappings
qdrant_data/collections/nn_places/0/segments/674cbdfb-c3a5-4ac7-a579-daf36819c702/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_data/collections/nn_places/0/segments/9d9408ae-3c1a-46eb-9e50-db85f7c90d95/: mutable_id_tracker.mappings
qdrant_data/collections/nn_places/0/segments/9d9408ae-3c1a-46eb-9e50-db85f7c90d95/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_data/collections/nn_places/0/segments/f1bef0cd-e1d7-4f52-adbb-e101e16a9150/: mutable_id_tracker.mappings
qdrant_data/collections/nn_places/0/segments/f1bef0cd-e1d7-4f52-adbb-e101e16a9150/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_data/collections/nn_places/0/segments/fa667fa7-ce09-4435-806f-7d6078418758/: mutable_id_tracker.mappings
qdrant_data/collections/nn_places/0/segments/fa667fa7-ce09-4435-806f-7d6078418758/payload_index/: IDENTITY  LOG  MANIFEST-000005
