[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.119.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.0",
]

[tool.ruff.lint]
select = [ "E", "F", "I", "A", "COM", "ALL", "ISC", "RET", "Q", "N" ]

ignore = [
    "D203",
    "D213",
    "E402",
    "PT009",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.pep8-naming]
ignore-names = ["setUp", "tearDown", "setUpClass", "tearDownClass"]



