[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "fastapi[all]>=0.119.0",
    "hf-xet>=1.1.10",
    "parameterized>=0.9.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "parametrize>=0.1.1",
    "qdrant-client>=1.15.1",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.0",
]

[tool.ruff.lint]
select = [ "E", "F", "I", "A", "ANN", "COM", "ISC", "RET", "Q", "N" ]


ignore = [
    "D203",
    "D213",
    "E402",
    "PT009",
    "E501",
    "N805",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.pep8-naming]
ignore-names = ["setUp", "tearDown", "setUpClass", "tearDownClass"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
known-first-party = ["schemas", "services", "models", "core", "db", "api"]